# hasktorch-naperian

./: .gitignore  LICENSE  README.md  hasktorch-naperian.cabal  stack.yaml
main/: Main.hs
src/Data/: Hybrid.hs  HybridCorrupt.hs  Indexed.hs  Naperian.hs
src/Data/Indexed/: Category.hs
src/Data/Naperian/: Examples.hs  Tree.hs
src/Torch/: Naperian.hs
src/Torch/Naperian/: Examples.hs
