name:                hasktorch-naperian
version:             0.1.0.0
synopsis:            Integrating Naperian functors with Hasktorch
description:         Integrating Naperian functors with Hasktorch.
homepage:            https://github.com/jasigal/hasktorch-naperian#readme
license:             BSD3
license-file:        LICENSE
author:              Jesse Sigal
maintainer:          -
copyright:           2019 Jesse Sigal
category:            Tensors, Machine Learning, AI, Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Naperian
                     , Data.Naperian.Examples
                     , Data.Hybrid
                     , Torch.Naperian
                     , Torch.Naperian.Examples
  build-depends:       base >= 4.7 && < 5
                     , Naperian
                     , ad
                     , singleton-bool
                     , ghc-typelits-knownnat
                     , constraints == 0.11
  ghc-options:         -fplugin GHC.TypeLits.KnownNat.Solver
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jasigal/hasktorch-naperian
